# cuesheet

./: .dockerignore  .env.example  .gitignore  Containerfile  README.md  docker-compose.yml  example_production_data.sql  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yaml
app/: ai_prompts.py  ai_service.py  auth.py  database.py  main.py
app/mcp/: __init__.py  server.py  tools.py
docs/: BACKUP_STRATEGY.md  SCALING_OPTIONS.md
scripts/: reset_password.py
static/: ai_assistant.js  input.css  output.css
templates/: admin.html  ai_assistant.html  camera.html  director.html  operator.html  overview.html
